Attempt to fix jumpy fixed bg

--- a/styles.less
+++ b/styles.less
@@ -227,10 +227,14 @@ h2 {
     @media(min-width: @screen-xl) { right: 20vw; }
 }
 
-#projectsSection {
+#projectSectionBG {
     background-image: url('img/pexels-zaksheuskaya-709412-1568607.jpg');
+    height: 100vh; width: 100vw;
+    position: fixed;
+}
+
+#projectsSection {
     border-right: 10px solid @deepDarkBlue;
-    z-index: 1;
     @media(max-width: @screen-sm) { height: auto; }
 }
 
